@@ -5482,7 +5482,6 @@ SV* dbd_db_quote(SV *dbh, SV *str, SV *type)
   return result;
 }
 
-#ifdef DBD_MYSQL_INSERT_ID_IS_GOOD
 SV *mysql_db_last_insert_id(SV *dbh, imp_dbh_t *imp_dbh,
         SV *catalog, SV *schema, SV *table, SV *field, SV *attr)
 {
@@ -5499,7 +5498,6 @@ SV *mysql_db_last_insert_id(SV *dbh, imp_dbh_t *imp_dbh,
   ASYNC_CHECK_RETURN(dbh, &PL_sv_undef);
   return sv_2mortal(my_ulonglong2str(aTHX_ mysql_insert_id(imp_dbh->pmysql)));
 }
-#endif
 
 #if MYSQL_ASYNC
 int mysql_db_async_result(SV* h, MYSQL_RES** resp)
